Google login wrking

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 VITE_API_BASE_URL=http://localhost:5000/api
-VITE_GOOGLE_CLIENT_ID=your_google_client_id_here
+VITE_GOOGLE_CLIENT_ID=631374089768-avmo5rv97b9pdtineov2lnfoagk7bluq.apps.googleusercontent.com
